Spacing on cookies page, avoid same referrer link

--- a/src/styles/modules/_generics.scss
+++ b/src/styles/modules/_generics.scss
@@ -42,3 +42,17 @@ p.etna-small-paragraph {
     }
   }
 }
+
+:first-child[hidden] {
+  + .tna-hgroup-xl,
+  + .tna-hgroup-l,
+  + .tna-hgroup-m,
+  + .tna-hgroup-s,
+  + .tna-heading-s,
+  + .tna-heading-m,
+  + .tna-heading-l,
+  + .tna-heading-xl {
+    margin-top: 0;
+    padding-top: 0;
+  }
+}
